--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,22 @@
 name: extended_bloc
 description: >
   A predictable state management library that helps implement the BLoC design pattern.
-version: 0.0.2+1-dev
+version: 7.0.0+2-dev
 repository: https://github.com/PlugFox/extended_bloc/tree/master
 issue_tracker: https://github.com/PlugFox/extended_bloc/issues
 homepage: https://github.com/PlugFox/extended_bloc
-#author: Plague Fox <plugfox@gmail.com>
+#authors:
+#  - Plague Fox <plugfox@gmail.com>
 #documentation: https://pub.dev/documentation/extended_bloc/latest
 
 environment:
-  sdk: '>=2.6.0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  bloc: ^6.0.2
+  meta: ^1.3.0
+  bloc: ^7.0.0
 
 dev_dependencies:
-  test_coverage: ^0.4.1
+  bloc_test: ^8.0.1
   test: ^1.14.6
-  bloc_test: ^7.0.3
+  coverage: '>=0.14.2 <2.0.0'
